src/tests/fixtures/typename/PropertySignatureTypenameNonLiteralType.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
export class User implements IPerson {
  __typename: string;
  /** @GQLField */
  name: string;
}

/** @GQLInterface */
export interface IPerson {
  /** @GQLField */
  name: string;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/typename/PropertySignatureTypenameNonLiteralType.ts:3:15 - error: Expected `__typename` property signature to specify the typename as a string literal string type. For example `__typename: "User";`

3   __typename: string;
                ~~~~~~
